added support for deployment to J2EE Preview server in WTP (seems fast and is hopefully more reliable than Tomcat in WTP)
refactoring of editor wizard and project builder Java code


fix for missing dependecies voor j2ee preview server

svn path=/webdsl-editor/branch/WebServices/; revision=5139