@@ -1,31 +1,15 @@
 package webdsl;
 
-import static org.eclipse.core.resources.IResource.*;
-
 import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.lang.reflect.Array;
 import java.lang.reflect.InvocationTargetException;
-import java.nio.channels.Channels;
-import java.nio.channels.FileChannel;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
-import org.eclipse.core.resources.IFile;
-import org.eclipse.core.resources.IFolder;
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IWorkspace;
 import org.eclipse.core.resources.IWorkspaceDescription;
 import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IProgressMonitor;
-import org.eclipse.core.runtime.NullProgressMonitor;
-import org.eclipse.core.runtime.Path;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.operation.IRunnableWithProgress;
@@ -36,25 +20,14 @@ import org.eclipse.ui.INewWizard;
 import org.eclipse.ui.IWorkbench;
 import org.strategoxt.imp.runtime.EditorState;
 import org.strategoxt.imp.runtime.Environment;
-import org.eclipse.wst.server.core.IModule;
-import org.eclipse.wst.server.core.IRuntime;
-import org.eclipse.wst.server.core.IRuntimeType;
-import org.eclipse.wst.server.core.IRuntimeWorkingCopy;
-import org.eclipse.wst.server.core.IServer;
-import org.eclipse.wst.server.core.IServerType;
-import org.eclipse.wst.server.core.IServerWorkingCopy;
-import org.eclipse.wst.server.core.ServerCore;
-import org.eclipse.wst.server.core.ServerUtil;
-import org.eclipse.wst.server.core.internal.Server;
-import org.eclipse.wst.server.core.internal.ServerWorkingCopy;
-
 import webdsl.WebDSLEditorWizardPage.SelectedDatabase;
 import webdsl.WebDSLEditorWizardPage.SelectedServer;
+
+import static webdsl.FileUtils.*;
 
 /**
  * A wizard for creating new WebDSL projects.
  */
-@SuppressWarnings("restriction")
 public class WebDSLEditorWizard extends Wizard implements INewWizard {
 
     protected WebDSLEditorWizardPage input;
@@ -210,7 +183,7 @@ public class WebDSLEditorWizard extends Wizard implements INewWizard {
         createDirs(project.getLocation()+"/.settings");
         
         writeBuildXmlFile(project, selectedServer);
-        if(selectedServer==SelectedServer.WTPTOMCAT){
+        if(selectedServer==SelectedServer.WTPTOMCAT || selectedServer==SelectedServer.WTPJ2EEPREVIEW){
           writeBuildXmlLaunchFile(project, appName, plugindir);
         }
         else{
@@ -315,7 +288,7 @@ public class WebDSLEditorWizard extends Wizard implements INewWizard {
          ant.append("\t<property name=\"webdsl-java-cp\" value=\"${plugindir}/include/webdsl.jar\"/>\n");
          ant.append("\t<property name=\"webdslexec\" value=\"java\"/>\n");
          ant.append("\t<!-- command-line build only uses .servletapp, plugin build also uses WebContent to deploy with WTP -->\n");         
-         if(selectedServer==SelectedServer.WTPTOMCAT){
+         if(selectedServer==SelectedServer.WTPTOMCAT || selectedServer==SelectedServer.WTPJ2EEPREVIEW){
            ant.append("\t<property name=\"generate-dir\" value=\"WebContent\"/>\n");
          }
          else{
@@ -610,6 +583,9 @@ public class WebDSLEditorWizard extends Wizard implements INewWizard {
          if(selectedServer==SelectedServer.WTPTOMCAT){
            projectFile.append("\t\t<buildCommand><name>webdsl.editor.builder</name></buildCommand>\n");
          }
+         if(selectedServer==SelectedServer.WTPJ2EEPREVIEW){
+             projectFile.append("\t\t<buildCommand><name>webdsl.editor.builderJ2EEPreview</name></buildCommand>\n");
+         }
          //clean trigger
          projectFile.append("\t\t<buildCommand>\n");
          projectFile.append("\t\t\t<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>\n");
@@ -634,286 +610,5 @@ public class WebDSLEditorWizard extends Wizard implements INewWizard {
             e.printStackTrace();
         }
      }
-     
-     /*
-      * add version to server instance String, otherwise builds break after
-      * updating the plugin, due to stale references in 
-      * -workspace-/.metadata/.plugins/org.eclipse.wst.server.core/
-      * to the tomcat installation of the previous version
-      */
-     public static String webdslversion = 
-         Activator.getInstance().getBundle().getVersion().toString(); 
-     public static String tomcatruntimeid = 
-         "webdsl_tomcat6runtime" + webdslversion; 
-     public static String tomcatruntimename = 
-         "Runtime Tomcat v6.0 WebDSL v" + webdslversion; 
-     public static String tomcatserverid = 
-         "webdsl_tomcat6server" + webdslversion; 
-     public static String tomcatservername = 
-         "Tomcat v6.0 Server WebDSL v" + webdslversion; 
-     
-     public static boolean fileExists(String file){
-         return new File(file).exists();
-     }
-     
-     public static String writeTomcatConfigFile(String plugindir){
-         IWorkspace workspace = ResourcesPlugin.getWorkspace();
-         String tomcatdir = plugindir+"webdsl-template/tomcat/tomcat";
-         IProject project = workspace.getRoot().getProject("Servers");
-         String fileName = project.getLocation()+"/"+tomcatservername+" at localhost.launch";
-         if(fileExists(fileName)){
-             System.out.println("Tomcat configuration file already exists: "+fileName);
-             return fileName;
-         }
-         String jre = "org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6";
-         String workspacedir = workspace.getRoot().getRawLocation().toString();
-         
-         String workingDir = workspacedir+"/Servers/workingdir/tomcat/tmp_v"+webdslversion;
-         System.out.println("Server working dir: "+workingDir); //seems to be ignored, VM_ARGUMENTS settings below are overridden
-         StringBuffer tomcatconfigFile = new StringBuffer();
-         tomcatconfigFile.append("<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n");
-         tomcatconfigFile.append("\t<launchConfiguration type=\"org.eclipse.jst.server.tomcat.core.launchConfigurationType\">\n");
-         tomcatconfigFile.append("\t<listAttribute key=\"org.eclipse.jdt.launching.CLASSPATH\">\n");
-         tomcatconfigFile.append("\t\t<listEntry value=\"&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot; standalone=&quot;no&quot;?&gt;&#10;&lt;runtimeClasspathEntry containerPath=&quot;"+jre+"&quot; path=&quot;1&quot; type=&quot;4&quot;/&gt;&#10;\"/>\n");
-         tomcatconfigFile.append("\t\t<listEntry value=\"&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot; standalone=&quot;no&quot;?&gt;&#10;&lt;runtimeClasspathEntry externalArchive=&quot;"+tomcatdir+"/bin/bootstrap.jar&quot; path=&quot;3&quot; type=&quot;2&quot;/&gt;&#10;\"/>\n");
-         tomcatconfigFile.append("\t</listAttribute>\n");
-         tomcatconfigFile.append("\t<booleanAttribute key=\"org.eclipse.jdt.launching.DEFAULT_CLASSPATH\" value=\"false\"/>\n");
-         tomcatconfigFile.append("\t<stringAttribute key=\"org.eclipse.jdt.launching.JRE_CONTAINER\" value=\""+jre+"\"/>\n");
-         tomcatconfigFile.append("\t<stringAttribute key=\"org.eclipse.jdt.launching.PROGRAM_ARGUMENTS\" value=\"start\"/>\n");
-         tomcatconfigFile.append("\t<stringAttribute key=\"org.eclipse.jdt.launching.VM_ARGUMENTS\" value=\"-Dcatalina.base=&quot;"+workingDir+"&quot; -Dcatalina.home=&quot;"+tomcatdir+"&quot; -Dwtp.deploy=&quot;"+workingDir+"/wtpwebapps&quot; -Djava.endorsed.dirs=&quot;"+tomcatdir+"/endorsed&quot; -Xss8m -Xms48m -Xmx1024m -XX:MaxPermSize=384m\"/>\n");
-         tomcatconfigFile.append("\t<stringAttribute key=\"server-id\" value=\""+tomcatserverid+"\"/>\n");
-         tomcatconfigFile.append("</launchConfiguration>\n");
-         try {
-            writeStringToFile(tomcatconfigFile.toString(), fileName);
-            System.out.println("created Tomcat configuration file: "+fileName);
-         } catch (IOException e) {
-            e.printStackTrace();
-         }
-         refreshProject(project);
-         return fileName;
-     }
-     
-     
-     public static IRuntimeType getTomcatRuntimeType(){
-         IRuntimeType[] runtimeTypes = ServerUtil.getRuntimeTypes(null, null, null);
-         IRuntimeType tomcat6runtimetype = null;
-         if (runtimeTypes != null) {
-             int size = runtimeTypes.length;
-             for (int i = 0; i < size; i++) {
-                 IRuntimeType runtimeType = runtimeTypes[i];
-                 //System.out.println("  "+ runtimeType +"    "+ runtimeType.getName());
-                 if(runtimeType.getName().equals("Apache Tomcat v6.0")){
-                     tomcat6runtimetype = runtimeType;
-                 }
-             }
-         }
-         System.out.println("runtime type: "+tomcat6runtimetype);
-         return tomcat6runtimetype;
-     }
-     public static IRuntime getWebDSLTomcatRuntime(){
-         IRuntime[] runtimes = ServerUtil.getRuntimes(null, null);
-         IRuntime plugintomcat6runtime = null;
-         for(IRuntime ir : runtimes){
-             System.out.println(ir.getId());
-             if(ir.getId().equals(tomcatruntimeid)){
-                 plugintomcat6runtime = ir;
-             }
-         }
-         System.out.println("runtime: "+plugintomcat6runtime);
-         return plugintomcat6runtime;
-     }
-     public static IRuntime createWebDSLTomcatRuntime(String plugindir, IProgressMonitor monitor) throws CoreException{
-             IRuntimeType tomcat6runtimetype = getTomcatRuntimeType();
-             IRuntimeWorkingCopy rwc = tomcat6runtimetype.createRuntime(tomcatruntimeid, monitor);
-             rwc.setLocation(Path.fromOSString(plugindir+"/webdsl-template/tomcat/tomcat"));
-             //System.out.println("Location of Tomcat 6 runtime: "+rwc.getLocation());
-             rwc.setName(tomcatruntimename);
-             IRuntime rt = rwc.save(true, monitor);
-             System.out.println("created runtime: "+rt);
-             return rt;
-     }
-     /**
-      * add tomcat 6 runtime for webdsl plugin if not created yet
-      * @param plugindir
-      * @param monitor
-      * @return
-      * @throws CoreException
-      */
-     public static IRuntime getOrCreateWebDSLTomcatRuntime(String plugindir, IProgressMonitor monitor)throws CoreException{
-         IRuntime plugintomcat6runtime = getWebDSLTomcatRuntime();
-         if(plugintomcat6runtime == null){
-             plugintomcat6runtime = createWebDSLTomcatRuntime(plugindir,monitor);
-         }
-         System.out.println("get or create runtime: "+plugintomcat6runtime);
-         return plugintomcat6runtime;
-     }
-     
-     
-     public static IServer getWebDSLTomcatServer(IProject project,IProgressMonitor monitor){
-         IServer plugintomcat6server = null;
-         IModule module = ServerUtil.getModule(project);
-         System.out.println("Module: "+module);
-         if(module==null){
-             return null;
-         }
-         for(IServer serv : ServerUtil.getServersByModule(module, monitor)){ 
-             if(serv.getId().equals(tomcatserverid)){
-                 plugintomcat6server = serv;
-             }
-         } 
-         if(plugintomcat6server==null){
-             for(IServer serv : ServerUtil.getAvailableServersForModule(ServerUtil.getModule(project), true, monitor)){ 
-                 if(serv.getId().equals(tomcatserverid)){
-                     plugintomcat6server = serv;
-                 }
-             } 
-         }
-         System.out.println("server: "+plugintomcat6server);
-         return plugintomcat6server;
-     }
-     public static IServer createWebDSLTomcatServer(IProject project, String plugindir, IProgressMonitor monitor) throws CoreException{
-         IRuntime plugintomcat6runtime = getOrCreateWebDSLTomcatRuntime(plugindir,monitor);
-         IRuntimeType tomcat6runtimetype = getTomcatRuntimeType();
-         IServerType st = getCompatibleServerType(tomcat6runtimetype);
-         //System.out.println(st);
-         IServer plugintomcat6server = null;
-         IServerWorkingCopy server = st.createServer(tomcatserverid, null, plugintomcat6runtime, monitor);
-         server.setName(tomcatservername);
-         plugintomcat6server = server.saveAll(true, monitor); //saveAll will also save ServerConfiguration and Runtime if they were still WorkingCopy
-         System.out.println("created server: "+plugintomcat6server);
-         
-         copyKeystoreFile(project, plugindir);         
-
-         writeTomcatConfigFile(plugindir);
-         plugintomcat6server.publish(IServer.PUBLISH_CLEAN, monitor);
-         
-         return plugintomcat6server;
-     }
-     public static void copyKeystoreFile(IProject project, String plugindir){
-        try {
-            copyFile(plugindir+"/webdsl-template/template-java-servlet/tomcat/.keystore",project.getWorkspace().getRoot().getLocation()+"/Servers/.keystore");
-        } catch (IOException e) {
-            e.printStackTrace();
-        }   
-     }
-     /**
-      * add tomcat 6 server for webdsl plugin of not created yet
-      * @param project
-      * @param monitor
-      * @return
-      * @throws CoreException
-      */
-     public static IServer getOrCreateWebDSLTomcatServer(IProject project, String plugindir, IProgressMonitor monitor) throws CoreException{
-         IServer plugintomcat6server = getWebDSLTomcatServer(project,monitor);
-         if(plugintomcat6server==null){
-             plugintomcat6server = createWebDSLTomcatServer(project, plugindir, monitor);
-         }
-         System.out.println("get or create server: "+plugintomcat6server);
-         return plugintomcat6server;
-     }
-     
-    public static void addProjectModuleToServer(IProject project, IServer plugintomcat6server, IProgressMonitor monitor) throws CoreException{
-         IModule[] currentModules = plugintomcat6server.getModules();
-         IModule projectModule = ServerUtil.getModule(project);
-         if(!Arrays.asList(currentModules).contains(projectModule)){
-             IServerWorkingCopy serveraddmodule = new ServerWorkingCopy((Server) plugintomcat6server);
-             // attach the project module to the server config
-             IModule[] modules = {projectModule};
-             serveraddmodule.modifyModules(modules, null, null);
-             serveraddmodule.saveAll(false,monitor);
-         }
-     }
-     public static void removeProjectModuleFromServer(IProject project, IServer plugintomcat6server, IProgressMonitor monitor) throws CoreException{
-        if(plugintomcat6server == null){
-            System.out.println("module is currently not in server, cannot remove it");
-            return;
-        }
-        IModule[] currentModules = plugintomcat6server.getModules();
-        IModule projectModule = ServerUtil.getModule(project);
-        if(Arrays.asList(currentModules).contains(projectModule)){
-            IServerWorkingCopy serveraddmodule = new ServerWorkingCopy((Server) plugintomcat6server);
-            // remove the project module from the server config
-            IModule[] modules = {projectModule};
-            serveraddmodule.modifyModules(null, modules, null);
-            serveraddmodule.saveAll(false,monitor);
-        }
-     }
-     
-     public static void initWtpServerConfig(String plugindir, final IProject project, final String projectName, IProgressMonitor monitor) throws CoreException{
-         IServer plugintomcat6server = getOrCreateWebDSLTomcatServer(project,plugindir,monitor);
-         addProjectModuleToServer(project,plugintomcat6server,monitor);
-     }
-     
-     //copy from org.eclipse.wst.server.ui.internal.wizard.page.NewRuntimeComposite (protected access)
-     protected static IServerType getCompatibleServerType(IRuntimeType runtimeType) {
-         List<IServerType> list = new ArrayList<IServerType>();
-         IServerType[] serverTypes = ServerCore.getServerTypes();
-         int size = serverTypes.length;
-         for (int i = 0; i < size; i++) {
-             IRuntimeType rt = serverTypes[i].getRuntimeType();
-             if (rt != null && rt.equals(runtimeType))
-                 list.add(serverTypes[i]);
-         }
-         if (list.size() == 1)
-             return list.get(0);
-         return null;
-     }
-     
-     public static void writeStringToFile(String s, String file) throws IOException{
-         FileOutputStream in = null;
-         try{
-             File buildxml = new File(file);
-             in = new FileOutputStream(buildxml);
-            FileChannel fchan = in.getChannel();
-            BufferedWriter bf = new BufferedWriter(Channels.newWriter(fchan,"UTF-8"));
-            bf.write(s);
-            bf.close();
-         }
-         finally{
-             if(in != null){
-                 in.close();
-             }
-         }
-     }
-     
-     public static void createDirs(String dirs){
-         new File(dirs).mkdirs();
-     }
-     
-     public static void copyFile(String ssource, String sdest) throws IOException {
-         System.out.println("Copying "+ssource+" to "+sdest);
-         File dest = new File(sdest);
-         File source = new File(ssource);
-         if(!dest.exists()) {
-             dest.createNewFile();
-         }
-         FileChannel in = null;
-         FileChannel out = null;
-         try {
-             in = new FileInputStream(source).getChannel();
-             out = new FileOutputStream(dest).getChannel();
-             out.transferFrom(in, 0, in.size());
-         }
-         finally {
-             if(in != null) {
-                 in.close();
-             }
-             if(out != null) {
-                 out.close();
-             }
-         }
-     }
-
-    private static void refreshProject(final IProject project) {
-        try {
-            NullProgressMonitor monitor = new NullProgressMonitor();
-            project.refreshLocal(DEPTH_INFINITE, monitor);
-            project.close(monitor);
-            project.open(monitor);
-            
-        } catch (CoreException e) {
-            e.printStackTrace();
-        }
-    }
 
 }
